#16202. Add max permgen size to mac bundle vm options.