@@ -129,7 +129,7 @@ macAppBundle {
 	javaProperties.put("apple.awt.antialiasing", "true")    
 	javaProperties.put("apple.awt.showGrowBox", "true") 
 
-	javaExtras.put("VMOptions", "-Xmx"+"${project.maxmemoryServer}")
+	javaExtras.put("VMOptions", "-Xmx"+"${project.maxmemoryServer}" + " -XX:MaxPermSize=" + "${project.maxpermgenServer}")
 
 	def Map dict = new HashMap();
 	dict.put ("CFBundleTypeName", "onCourse server data file")
